1.1.6
 - ref: make pathlib.Path a standard in readfiles
 - code cleanup
 - drop support for Python<3.6
1.1.5
 - docs: fix build with recent version of latex (#191)
1.1.4
 - maintenance release
1.1.3
 - maintenance release
1.1.2
 - ci: Automated release to PyPI with appveyor and travis-ci
 - fix: support lmfit >= 0.9.11
1.1.1
 - Fix plotting error with LaTeX (thanks @toubol) (#179)
 - Update documentation
1.1.0
 - BREAKING CHANGE: Move to Python3 (thanks @toubol) (#173)
 - GUI:
   - Add option in Preferences to automatically close tools after usage
   - Add keyboard shortcuts (thanks @toubol)
 - Fix entry point for GUI (#172)
 - Refactor several asserts into raises
1.0.1
 - Improved support for ALV ".ASC" file format (#169)
 - NumPy 0.13 support for ".ptu" file reader
 - Code cleanup:
   - Fetch latest available version from GitHub releases
   - New dependency for "simplejson" Python package
   - Move appveyor recipe to separate folder 
1.0.0
 - New confocal fitting models T+T+2D and T+T+3D
 - Fix regression: .sin files could not be opened (#167)
0.9.9
 - Remove admin-requirement during install (Windows)
 - Support newer correlator.com .sin file format (experimental, #135)
 - Add smart progress dialog for fitting (#155)
 - Statistics: check "filename/title" by default (#151)
 - Documentation: fix bad LaTeX commands (#163)
0.9.8
 - Bugfixes:
   - Indexing error when saving sessions (#154)
   - Page number truncated in csv export (#159)
   - Export of csv files used incorrect normalization (#153)
   - Normalization parameter was not displayed in the 'Info' tool
0.9.7
 - Second triplet time is now larger than first triplet time
   by default
 - Remove a hack that causes a run through all pages
   e.g. when an average is created
 - Bugfixes:
   - Opening sessions with user-defined models
   - Saving sessions with comments containing non-ASCII characters
   - Windows build: Graphical plot export was misconfigured
     (added matplotlibrc patch in .spec file)
0.9.6