@@ -1,23 +1,27 @@
 .. _index:
 
-PyCorrFit documentation
-=======================
 
 .. image:: _static/PyCorrFit_logo_dark.png
+
+|
 
 Welcome to the documentation of PyCorrFit (version |release|), a data analysis software for
 fluorescence correlation spectroscopy (FCS).
 
+Documentation
+=============
 
 .. toctree::
-   :maxdepth: 1
-   :caption: Contents:
-
+   :maxdepth: 2
 
    sec_about
    sec_gallery
    sec_getting_started
    sec_contribute
+
+.. toctree::
+   :maxdepth: 1
+
    sec_changelog
 
 
